--- a/keeper/src/main/resources/application.yml
+++ b/keeper/src/main/resources/application.yml
@@ -5,7 +5,12 @@ spring:
         provider:
           one:
             issuer-uri: http://idp:9999/auth/realms/one
+          two:
+            issuer-uri: http://idp:9999/auth/realms/two
         registration:
           one:
+            client-id: keeper
+            client-secret: bfbd9f62-02ce-4638-a370-80d45514bd0a
+          two:
             client-id: keeper
             client-secret: bfbd9f62-02ce-4638-a370-80d45514bd0a
